# uvc-pipeline

./: .gitmodules  README.md  readme.txt
android/Camera_OpenCV_Pipeline/: README.md  build.gradle  release_notes.txt  settings.gradle
android/Camera_OpenCV_Pipeline/gradle/wrapper/: gradle-wrapper.properties
android/Camera_OpenCV_Pipeline/libWebCam/: CMakeLists.txt  build.gradle
android/Camera_OpenCV_Pipeline/libWebCam/src/main/: AndroidManifest.xml  opencv_native_lib
android/Camera_OpenCV_Pipeline/libWebCam/src/main/cpp/: native-pipeline-lib.cpp  util.cpp  util.h
android/Camera_OpenCV_Pipeline/libWebCam/src/main/cpp/UVCCamera_477aee8/: localdefines.h
android/Camera_OpenCV_Pipeline/libWebCam/src/main/cpp/UVCCamera_477aee8/libuvc/include/libuvc/: libuvc.h  libuvc_internal.h
android/Camera_OpenCV_Pipeline/libWebCam/src/main/cpp/UVCCamera_477aee8/libuvc/src/: stream.c
android/Camera_OpenCV_Pipeline/libWebCam/src/main/cpp/boost/: circular_buffer.hpp  circular_buffer_fwd.hpp
android/Camera_OpenCV_Pipeline/libWebCam/src/main/cpp/boost/circular_buffer/: base.hpp  space_optimized.hpp
android/Camera_OpenCV_Pipeline/libWebCam/src/main/cpp/camera_pipeline_modules/opencv/include/: opencv_client_ifc.h  opencv_control_ifc.h
android/Camera_OpenCV_Pipeline/libWebCam/src/main/cpp/camera_pipeline_modules/opencv/src/: opencv.cpp  opencv.h
android/Camera_OpenCV_Pipeline/libWebCam/src/main/cpp/camera_pipeline_modules/renderer/include/: renderer_control_ifc.h
android/Camera_OpenCV_Pipeline/libWebCam/src/main/cpp/camera_pipeline_modules/renderer/src/: renderer.cpp  renderer.h
android/Camera_OpenCV_Pipeline/libWebCam/src/main/cpp/camera_pipeline_modules/webcam/include/: webcam_control_ifc.h
android/Camera_OpenCV_Pipeline/libWebCam/src/main/cpp/camera_pipeline_modules/webcam/src/: webcam.cpp  webcam.h  webcam_fifo.cpp  webcam_fifo.h  webcam_status_callback.cpp  webcam_status_callback.h
android/Camera_OpenCV_Pipeline/libWebCam/src/main/cpp/camera_pipeline_modules/webcam_include/: JsonStatus.h  frame_access_registration_ifc.h  webcam_frame_access_ifc.h  webcam_include.h
android/Camera_OpenCV_Pipeline/libWebCam/src/main/cpp/camera_pipeline_modules/webcam_util/: frame_queue_abstract.h  frame_queue_webcam.h  webcam_frame_access_impl.h  webcam_util.cpp  webcam_util.h
android/Camera_OpenCV_Pipeline/libWebCam/src/main/java/com/ess/util/: UsbMonitor.java
android/Camera_OpenCV_Pipeline/libWebCam/src/main/java/com/ess/webcam/: Camera.java  ICamera.java  IOpencv.java  IRenderer.java  IStatusCallback.java  Opencv.java  Renderer.java  USBMonitor.java
android/Camera_OpenCV_Pipeline/libWebCam/src/main/res/xml/: device_filter.xml
android/Camera_OpenCV_Pipeline/pipeline_opencv/: build.gradle  build.gradle~
android/Camera_OpenCV_Pipeline/pipeline_opencv/src/androidTest/java/com/ess/webcam_pipeline/: ExampleInstrumentedTest.java
android/Camera_OpenCV_Pipeline/pipeline_opencv/src/main/: AndroidManifest.xml
android/Camera_OpenCV_Pipeline/pipeline_opencv/src/main/java/com/ess/utils/: ThreadedHandler.java
android/Camera_OpenCV_Pipeline/pipeline_opencv/src/main/java/com/ess/webcam_pipeline/: FrameIntervalDialogFragment.java  Pipeline2ViewActivity.java  VideoModeDialogFragment.java
android/Camera_OpenCV_Pipeline/pipeline_opencv/src/main/res/drawable/: ic_videocam_off_white_48dp.xml
android/Camera_OpenCV_Pipeline/pipeline_opencv/src/main/res/layout/: activity_main.xml
android/Camera_OpenCV_Pipeline/pipeline_opencv/src/main/res/layout-land/: activity_main.xml
android/Camera_OpenCV_Pipeline/pipeline_opencv/src/main/res/menu/: menu_render.xml
android/Camera_OpenCV_Pipeline/pipeline_opencv/src/main/res/values/: strings.xml
android/Camera_OpenCV_Pipeline/pipeline_opencv/src/test/java/ess/webcam_pipeline/: ExampleUnitTest.java
futures_pipeline/: CMakeLists.txt  Readme.md  main.cpp
futures_pipeline/camera/: camera-capabilities.cpp  camera-capabilities.h  camera-control-ifc.h  camera-device.h  camera-frame-queue-client-ifc.h  camera-frame-queue-server-ifc.h  camera.cpp  camera.h  camera_types.h  input.h  output.h  schema.h  schema_invalid.h
futures_pipeline/renderer/: qt-info.txt
futures_pipeline/renderer/gtkmm/: CMakeLists.txt  image-scaled.cpp  image-scaled.h  main.cpp  render-ui.cpp  render-ui.h  worker.cpp  worker.h
futures_pipeline/renderer/qt/CameraPipeline/: CameraPipeline.pro  mainwindow.cpp  mainwindow.h  mainwindow.ui
futures_pipeline/utils/: SyncLog.cpp  SyncLog.h  exec-shell.cpp  sync-log.cpp  sync-log.h  utils.h
futures_pipeline/utils/queue/: frame-queue.h
linux/: README.md  makefile
linux/project/: .cproject  .project  makefile
linux/project/src/: frame_queue_ifc.h  image_scaled.cpp  libuvc_acquisition.cpp  pipeline.h  render_ui.cpp  render_ui.h  uvc_worker.cpp  uvc_worker.h  v4l2_acquisition.cpp
linux/src/: frame_access_ifc.h  image_scaled.cpp  image_scaled.h  libuvc_acquisition.cpp  main.cpp  pipeline.h  render_ui.cpp  render_ui.h  uvc_worker.cpp  uvc_worker.h  v4l2_acquisition.cpp
linux/tools/: parse_raw_frames.py
